# autonomous_driving_v2

./: .gitmodules  Dockerfile  README.md  cartographer_ros.rosinstall  control.Dockerfile  drive.Dockerfile  package_requirements.sh  pip_requirements.txt  planning.Dockerfile  sensors.Dockerfile  slam.Dockerfile
astar_ackermann_planner/: CMakeLists.txt  plugin.xml
autonomous_driving.wiki/: Cartographer.md  Cartographer:-III_Mapping.md  Cartographer:-II_Recording_Data.md  Cartographer:-IV_Localization.md  Cartographer:-I_Prerequisites.md  Documentation-Overview.md  Examples.md  Hardware.md  Hardware:-Calibration.md  Hardware:-IMU.md  Hardware:-Lidar.md  Hardware:-MyoMuscles.md  Hardware:-Realsense-Camera.md  Hardware:-Steering.md  Home.md  Path_Planning.md  _Footer.md  _Sidebar.md
cartographer_ros/: CMakeLists.txt
navigation/: CMakeLists.txt  nav.rviz  nav_astarackermann.rviz  package.xml
quadtree_planner/: CMakeLists.txt  LICENSE_DubinsCar.txt  package.xml  plugin.xml
roboy_ad/: CMakeLists.txt  (+3 more)
roboy_models/: CMakeLists.txt  README.md  package.xml  rickshaw_angle_sensor.py  rickshaw_controller.py  rickshaw_joint_state_publisher.py  tricycle_controller.py
roboy_models/launch/: gaz_rickshaw.launch  gaz_tricycle.launch  gazebo.launch  model.launch  rickshaw_display.launch
roboy_models/rickshaw/: model.urdf
roboy_models/rickshaw/config/: controller.yaml  front_part_controller.yaml  joints_state.yaml
roboy_models/rickshaw/meshes/collisions/: front_part.stl  wheel_back.stl
roboy_models/rickshaw/meshes/visuals/: front_part.stl  left_wheel.stl  wheel_back.stl
(+448 files in other folders)
